exports[`borderWidth properly applies a value when passed only one 1`] = `
Object {
  "borderBottomWidth": "12px",
  "borderLeftWidth": "12px",
  "borderRightWidth": "12px",
  "borderTopWidth": "12px",
}
`;

exports[`borderWidth properly applies unitless values 1`] = `
Object {
  "border-bottom-width": 36,
  "border-left-width": 48,
  "border-right-width": 24,
  "border-top-width": 12,
}
`;

exports[`borderWidth properly applies unitless zero 1`] = `
Object {
  "border-bottom-width": 0,
  "border-left-width": 0,
  "border-right-width": 0,
  "border-top-width": 0,
}
`;

exports[`borderWidth properly applies values when passed four 1`] = `
Object {
  "borderBottomWidth": "36px",
  "borderLeftWidth": "48px",
  "borderRightWidth": "24px",
  "borderTopWidth": "12px",
}
`;

exports[`borderWidth properly applies values when passed three 1`] = `
Object {
  "borderBottomWidth": "36px",
  "borderLeftWidth": "24px",
  "borderRightWidth": "24px",
  "borderTopWidth": "12px",
}
`;

exports[`borderWidth properly applies values when passed two 1`] = `
Object {
  "borderBottomWidth": "12px",
  "borderLeftWidth": "24px",
  "borderRightWidth": "24px",
  "borderTopWidth": "12px",
}
`;
